objects/PurchaseOrder__c/PurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <label>Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>