objects/PurchaseOrder__c/fields/Number_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Line_Items__c</fullName>
    <label>Number of Line Items</label>
    <summaryForeignKey>PurchaseOrderLineItem__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>