objects/PurchaseOrder__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>PurchaseOrderLineItem__c.Total__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>