objects/PurchaseOrder__c/validationRules/Completed_Empty_OP.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Empty_OP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c, &quot;Completed&quot;), Number_of_Line_Items__c = 0)</errorConditionFormula>
    <errorMessage>Cannot completed opportunity purchase without items.</errorMessage>
</ValidationRule>